# FTMO-SCALPER

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_adx.py  test_atr.py  test_mt5.py  test_xau_atr.py
backtest/: analyze_gbp_trades.py  backtester.py  backtester_eurjpy.py  backtester_gbp.py  backtester_mtf.py  backtester_usdjpy.py  backtester_usdjpy_b.py  backtester_xau.py  backtester_xau_m5.py  download_data.py  download_mt5_full_history.py  filter_usdjpy_ftmo_candidates.py  python -m backtest.run_eurjpy_validation.py  resample_data.py  run_backtest.py  run_eurjpy_small_grid.py  run_eurjpy_validation.py  run_gbp_813_vs_814.py  run_gbp_m5_m1_break_confirm.py  run_gbp_p2_deep_analysis.py  run_gbp_refined_sell_grid.py  run_gbp_small_grid.py  run_gbp_subperiod_validation_813.py  run_gbp_validation.py  run_mtf.py  run_usdjpy_b.py  run_usdjpy_b_diagnostic.py  run_usdjpy_candidate_validation.py  run_usdjpy_final.py  run_usdjpy_fine_grid.py  run_usdjpy_oos_validation.py  run_usdjpy_single.py  run_xau_5m_batch.py  run_xau_hours_9_15_dynamic_hold.py  run_xau_m5_hours_grid.py  run_xau_m5_validation.py  run_xau_m5_validation_best.py  run_xau_validation.py  walk_forward.py
config/: assets.yaml  brokers.yaml  experiment_defaults.yaml  risk_profiles.yaml  sessions.yaml  settings.py
core/: indicators.py
dashboard/: README.md  app.py  run_dashboard.sh
data/: news_filter.py
docs/: DEPLOYMENT_FTMO.md  LIVE_PORTFOLIO.md  PROJECT_CONTEXT.md  architecture.md  ftmo_rules.md  mcp_and_skills.md  trades_30d.csv  (+3 more)
(+1501 files in other folders)
